--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,8 @@
 
 body {
   margin: 0;
-  padding: 0;
+  padding: 1rem;
+  height: 100vh;
   background: #eeeeee;
   font-family: "Helvetica Neue", sans-serif;
 }
@@ -18,14 +19,12 @@ body {
 .canvas {
   display: flex;
   flex: 1 1 auto;
+  align-self: center;
   justify-content: center;
-
-  svg {
-    background: #333;
-    border-radius: 30px;
-    border: 1px solid black;
-    padding: 20px;
-  }
+  padding: 1.5rem;
+  background: #333;
+  border: 1px solid #eeeeee;
+  border-radius: 30px;
 }
 
 .stats {
@@ -34,25 +33,39 @@ body {
   align-self: center;
   flex-direction: column;
   padding: 10px;
+  padding-top: 1.5rem;
+  margin-bottom: 1rem;
 
   .stat-row {
     display: flex;
     flex: 1 1 auto;
+    margin-bottom: 1.5rem;
   }
 
   .stat-column {
     flex-direction: column;
     display: flex;
-    flex: 1 1 auto;
+    flex: 1 1 100%;
   }
 
   .stat-field {
-    padding: 10px;
     margin-bottom: 2px;
+  }
+
+  .chart-label, .stat-label {
+    font-weight: 500;
+    margin-right: 0.5rem;
   }
 
   .fuzzy-input-chart {
     display: flex;
     flex: 1 1 auto;
+    flex-direction: column;
+
+    .chart-label {
+      padding-bottom: 0.5rem;
+      margin-bottom: 0.5rem;
+      border-bottom: 1px solid black;
+    }
   }
 }
